Components aligning correctly

--- a/src/App.css
+++ b/src/App.css
@@ -72,6 +72,7 @@ padding: 90px;
 
 .vidList {
   background-color: mediumslateblue;
+  display: block;
 }
 
 .addingBtn {
